--- a/src/components/CounterWithRedux/CounterWithRedux.css
+++ b/src/components/CounterWithRedux/CounterWithRedux.css
@@ -17,15 +17,6 @@
     justify-content: center;
 }
 
-.App {
-    background-color: indigo;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: row;
-}
-
 .CounterMain {
     width: 250px;
     background-color: orange;
@@ -35,20 +26,15 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-
 }
 
-.main {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
 .NumWrap {
     width: 70%;
     border-radius: 9px;
     border-style: solid;
     margin-bottom: 10px;
 }
+
 .CounterBtnsWrap {
     width: 70%;
     border-radius: 9px;
@@ -59,8 +45,10 @@
     align-items: center;
     padding-bottom: 10px;
 }
+
 .counterWithRedux {
     box-sizing: border-box;
     color: #2582a1;
     padding-left: 10px;
+    padding-right: 10px;
 }
